<resources>
    <string name="app_name">SnapMoment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>

    <!--    screen login-->
    <string name="txt_login">Đăng nhập</string>
    <string name="txt_forgot_password">Quên mật khẩu?</string>
    <string name="txt_nav_sign_up">Bạn chưa có tài khoản? Đăng kí</string>

    <string name="txt_sign_up">Đăng kí</string>
    <string name="txt_nav_login">Bạn đã có tài khoản rồi? Đăng nhập</string>
    <string name="txt_splash">SNAP MOMENT</string>
    <string name="txt_group_friend">tất cả bạn bè</string>
    <string name="txt_record">Ghi âm</string>
    <string name="txt_request_record">Yêu cầu cấp quyền thu âm, vào cài đặt ứng dụng để cấp quyền!</string>
    <string name="title_friend">Bạn bè của bạn</string>
    <string name="title_find_friend">Tìm kiếm bạn bè từ ứng dụng khác</string>
    <string name="title_add_friend">Lời mời kết bạn</string>
    <string name="title_number_friend">Bạn bè</string>
    <string name="header_title_signup_profile">Nhập thông tin</string>
    <string name="title_select_image">Chọn ảnh đại diện</string>
    <string name="label_input_name">Nhập tên của bạn:</string>
    <string name="label_continues">Tiếp tục</string>
    <string name="label_input_email">Nhập địa chỉ email:</string>
    <string name="label_save">Lưu</string>
    <string name="label_change_name">Thay đổi tên</string>
    <string name="label_change_password">Thay đổi mật khẩu</string>
    <string name="label_no_post">CHƯA CÓ BÀI VIẾT NÀO!!</string>
    <string name="label_cancel">Từ chối</string>
    <string name="label_start">Chia sẻ khoảnh khắc, kết nối cảm xúc, khám phá thế giới ngay!</string>
    <string name="label_send">Gửi</string>
</resources>