<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.feature.user.profile.SignupProfileFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.mysocialproject.ui.custom_view.AppHeader
            android:id="@+id/appHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headerTitle="@string/header_title_signup_profile"
            app:headerIvLeft="@drawable/ic_arrow_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_select_image"
            android:textAlignment="center"
            android:textSize="@dimen/txt_size_24sp"
            android:layout_marginTop="@dimen/size_10dp"
            android:fontFamily="@font/varelaround_regular"
            android:textColor="@color/txt_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appHeader" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ct_avatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginTop="@dimen/size_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintWidth_percent="0.4">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_circle_image_gray"
                android:src="@drawable/ic_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/size_14dp"
                android:layout_marginBottom="@dimen/size_6dp"
                android:src="@drawable/ic_camera"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.example.mysocialproject.ui.custom_view.AppEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            app:edtLabel="@string/label_input_name"
            app:edtLabelTextColor="@color/txt_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ct_avatar" />

        <com.example.mysocialproject.ui.custom_view.AppButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:btnText="@string/label_continues"
            app:btnIconRight="@drawable/ic_arrow_right"
            android:layout_marginHorizontal="@dimen/size_10dp"
            android:layout_marginBottom="@dimen/size_30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>